# planchet-rs

./: Cargo.toml  LICENSE-MIT  README.md  crates.js  help.html  index.html  settings.html  src-files.js
planchet/: Cargo.toml  all.html  enum.Error.html  enum.KnownApiError.html  index.html  sidebar-items.js  struct.AddCollectedItem.html  struct.ApiError.html  struct.Client.html  struct.ClientBuilder.html  struct.EditCollectedItem.html  struct.GetCollectedItemsParams.html  struct.GradingDetails.html  struct.ItemPrice.html  struct.OAuthTokenParams.html  struct.SearchTypesParams.html  type.Result.html
planchet-cli/: Cargo.toml  LICENSE-MIT  src.display.rs
planchet-cli/src/: display.rs  main.rs
planchet-cli/tests/: cli.rs
planchet-stresstest/: Cargo.toml
planchet/client/: index.html  struct.Client.html  struct.ClientBuilder.html
planchet/de/: fn.de_from_str_or_int.html  fn.de_i64_from_str_or_int.html  fn.de_optional_from_str_or_int.html  fn.de_optional_i32_from_str.html  fn.de_optional_i64_from_str_or_int.html  index.html  sidebar-items.js
planchet/error/: enum.Error.html  enum.KnownApiError.html  index.html  sidebar-items.js  struct.ApiError.html  struct.ApiErrorResponse.html  type.Result.html
planchet/model/: enum.Category.html  enum.Cover.html  enum.Grade.html  enum.GrantType.html  enum.Orientation.html  enum.PublicationType.html  index.html  struct.Catalogue.html  struct.CatalogueDetail.html  struct.CoinSide.html  struct.CollectedItem.html  struct.CollectedItemType.html  struct.CollectedItems.html  struct.Collection.html  struct.Composition.html  struct.Contributor.html  struct.Currency.html  struct.Demonetization.html  struct.GradePrice.html  struct.GradePrices.html  struct.GradingCompany.html  struct.GradingDesignation.html  struct.GradingDetails.html  struct.GradingStrike.html  struct.GradingSurface.html  struct.Issue.html  struct.Issuer.html  struct.IssuerDetail.html  struct.IssuingEntity.html  struct.ItemPrice.html  struct.LetteringScript.html  struct.Mark.html  struct.Mint.html  struct.MintDetail.html  struct.NumistaType.html  struct.OAuthToken.html  struct.Picture.html  struct.Printer.html  struct.Publication.html  struct.PublicationPart.html  (+12 more)
planchet/model/request/: enum.MimeType.html  index.html  struct.AddCollectedItemParams.html  struct.EditCollectedItemParams.html  struct.GetCollectedItemsParams.html  struct.GradingDetailsParams.html  struct.Image.html  struct.ItemPriceParams.html  struct.OAuthTokenParams.html  struct.SearchByImageParams.html  struct.SearchTypesParams.html
planchet/model/response/: index.html  struct.CataloguesResponse.html  struct.CollectionsResponse.html  struct.IssuersResponse.html  struct.MintsResponse.html  struct.SearchByImageResponse.html  struct.SearchTypesResponse.html
planchet/models/: enum.Category.html  enum.Cover.html  enum.Grade.html  enum.GrantType.html  enum.MimeType.html  enum.Orientation.html  enum.PublicationType.html  index.html  sidebar-items.js  struct.ApiError.html  struct.Catalogue.html  struct.CatalogueDetail.html  struct.CataloguesResponse.html  struct.CoinSide.html  struct.CollectedItem.html  struct.CollectedItemType.html  struct.CollectedItems.html  struct.CollectedItemsResponse.html  struct.Collection.html  struct.CollectionsResponse.html  struct.Composition.html  struct.Contributor.html  struct.Currency.html  struct.Demonetization.html  struct.GradePrice.html  struct.GradePrices.html  struct.GradingCompany.html  struct.GradingDesignation.html  struct.GradingDetails.html  struct.GradingStrike.html  struct.GradingSurface.html  struct.Image.html  struct.Issue.html  struct.Issuer.html  struct.IssuerDetail.html  struct.IssuersResponse.html  struct.IssuingEntity.html  struct.ItemPrice.html  struct.LetteringScript.html  struct.Mark.html  (+25 more)
planchet/models/request/: enum.MimeType.html  index.html  sidebar-items.js  struct.AddCollectedItem.html  struct.AddCollectedItemParams.html  struct.EditCollectedItem.html  struct.EditCollectedItemParams.html  struct.GetCollectedItemsParams.html  struct.GradingDetails.html  struct.GradingDetailsParams.html  struct.Image.html  struct.ItemPrice.html  struct.ItemPriceParams.html  struct.OAuthTokenParams.html  struct.SearchByImageParams.html  struct.SearchByImageRequest.html  struct.SearchTypesParams.html
planchet/models/response/: index.html  sidebar-items.js  struct.CataloguesResponse.html  struct.CollectionsResponse.html  struct.IssuersResponse.html  struct.MintsResponse.html  struct.SearchByImageResponse.html  struct.SearchTypesResponse.html
planchet/src/: client.rs  de.rs  error.rs  lib.rs  models.rs
planchet/src/model/: image.rs  mod.rs  request.rs  response.rs
planchet/src/models/: mod.rs  request.rs
planchet/tests/: integration_test.rs
planchet_cli/: all.html  enum.Commands.html  fn.build_client.html  fn.dump_collection.html  fn.fetch_collection.html  fn.get_gregorian_year.html  fn.get_issuer_name.html  fn.get_type.html  fn.get_year.html  fn.main.html  fn.parse_lang.html  fn.print_search_header.html  fn.search_types.html  fn.summarize_collection.html  index.html  sidebar-items.js  struct.Cli.html  struct.IssuerSummary.html  struct.TypeResult.html
planchet_stresstest/: all.html  fn.main.html  index.html  struct.Cli.html
src/: lib.rs  models.rs
(+1615 files in other folders)
