[package]
name = "planchet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
rust_decimal = { version = "1.35.0", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
iso_currency = { version = "0.5.3", features = ["with-serde"] }
isolang = { version = "1.0", features = ["serde_serialize"] }

[dev-dependencies]
mockito = "1.7.0"
