[workspace]
resolver = "2"
members = [
    "planchet",
    "planchet-cli", "planchet-stresstest",
]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
http = "1.0"
iso_currency = { version = "0.5.3", features = ["with-serde"] }
isolang = { version = "2.4", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
reqwest-middleware = "0.4.2"
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = { version = "2.5.7", features = ["serde"] }
assert_cmd = "2.1.1"
predicates = "3.1.3"
mockito = "1.7.1"
planchet = { path = "planchet" }
