[package]
name = "planchet-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
planchet = { path = "../planchet" }
tabled = "0.15.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
mockito = "1.4.0"
serde_json = "1.0.117"
