[package]
name = "planchet-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
planchet = { path = "../planchet" }
tabled = "0.20.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
mockito = "1.7.0"
serde_json = "1.0.145"
