[package]
name = "planchet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
iso_currency = { workspace = true }
isolang = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
